feat: add day 2 guest

--- a/src/app/feature/calendar/calendar-grid.component.html
+++ b/src/app/feature/calendar/calendar-grid.component.html
@@ -70,6 +70,8 @@
       ngSrc="./../../../assets/content/images/angular-space.png"
       width="100"
       height="100"
+      href="https://polarized-pram-52c.notion.site/What-s-the-First-Name-of-Angular-Veteran-who-has-become-AI-Expert-150d2d2ccbe0800bb4d1e8aab045f89c?pvs=4"
+      target="_blank"
       alt="Angular Space"
     />
   </a>
