feat: 🎸 store user visited days in local storage
Store user visited days in local storage so when next time loading the
page only those that were visited to be opened

--- a/src/app/feature/calendar/calendar-grid.component.html
+++ b/src/app/feature/calendar/calendar-grid.component.html
@@ -3,13 +3,13 @@
   <h1>Christmas Calendar</h1>
 </div>
 
-@for (card of cards; track $index) {
+@for (card of cards(); track $index) {
   <div
     class="card day-{{ card.day }}"
     xmasOpenDetailsDialog
     [card]="card"
     [xmasShakeWhenDisabled]="!card.canReveal && !card.revealed"
-    [class.pulse]="card.canReveal && !card.revealed"
+    [class.pulse]="card.canAnimate"
   >
     <label>
       <input type="checkbox" [checked]="card.revealed" [disabled]="!card.canReveal" (change)="card.revealed = !card.revealed" />
