--- a/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.html
+++ b/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.html
@@ -9,7 +9,7 @@
 <ng-template #angularExpertThoughts>
   @if (selectedContent()!.gift) {
     <a
-      href="https://polarized-pram-52c.notion.site/What-s-the-First-Name-of-Angular-Veteran-who-has-become-AI-Expert-150d2d2ccbe0800bb4d1e8aab045f89c?pvs=4"
+      href="https://www.angularspace.com/10x-e-book-giveaway-learning-angular-5th-edition-by-aristeidis-bampakos/"
       target="_blank"
       class="gift"
     >
