--- a/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.html
+++ b/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.html
@@ -9,7 +9,7 @@
 <ng-template #angularExpertThoughts>
   @if (selectedContent()!.gift) {
     <a
-      href="https://www.angularspace.com/10x-e-book-giveaway-learning-angular-5th-edition-by-aristeidis-bampakos/"
+      href="https://polarized-pram-52c.notion.site/Find-the-place-where-to-use-this-code-165d2d2ccbe080a7a448d04c77b6076f"
       target="_blank"
       class="gift"
     >
